# rbi-mule-detection

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  RBI_EXECUTION_GUIDE_FINAL.md  RBI_MULE_DETECTION_PROJECT_PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  model_validation.yml
.streamlit/: config.toml
data/: README.md
docker/: Dockerfile.api  Dockerfile.dashboard
docs/: api_reference.md  architecture.md  feature_documentation.md  interview_prep.md
frontend/: app.py
frontend/assets/: style.css
frontend/components/: charts.py  layout.py  tables.py
frontend/pages/: 1_Overview.py  2_Feature_Explorer.py  3_Model_Comparison.py  4_Explainability.py  5_Network_Graph.py  6_Fairness_Audit.py  7_Account_Inspector.py  8_API_Demo.py
notebooks/: 01_eda_data_quality.ipynb  05_model_comparison.ipynb  09_submission.ipynb
outputs/models/: best_model.joblib  catboost.joblib  lightgbm.joblib  logistic.joblib  logistic_regression.joblib  neural_net.joblib  neural_net.scaler  random_forest.joblib  xgboost.joblib
outputs/predictions/: submission.csv
outputs/reports/: benchmark_results.json  fairness_report.json  lightgbm_report.json
outputs/shap_values/: account_ids.npy  explanations.json  feature_names.json
scripts/: generate_submission.py
src/api/: dependencies.py  main.py  middleware.py  schemas.py
src/data/: loader.py  merger.py  preprocessor.py  splitter.py  validator.py
src/db/: crud.py  init_db.py  models.py
src/explainability/: fairness.py  model_card.py  pdp.py  (+2 more)
tests/: conftest.py
(+52 files in other folders)
