[project]
name = "rbi-mule-detection"
version = "1.0.0"
description = "Production-grade mule account detection for RBI Innovation Hub"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "pyarrow>=14.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "catboost>=1.2",
    # "torch>=2.1",  # local only — not needed for dashboard
    "optuna>=3.4",
    "imbalanced-learn>=0.11",
    "networkx>=3.2",
    "python-louvain>=0.16",
    "shap>=0.43",
    "fairlearn>=0.9",
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "pydantic>=2.5",
    "streamlit>=1.28",
    "plotly>=5.18",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pyvis>=0.3",
    "joblib>=1.3",
    "nbformat>=5.9",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "httpx>=0.25",
    "ruff>=0.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: unit tests",
    "integration: requires real data",
]

[tool.ruff]
line-length = 100
target-version = "py310"
